Added path to binary to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ spendshelf-backend
 .idea/
 # MonogoDB directory
 dbdata/
+# Path to binary
+/home/mark/go/src/github.com/lungria/spendshelf-backend/src/pkg/webhook/cmd/webhook/webhook
