--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -8,6 +8,6 @@ server {
 
   location / {
     access_log off;
-    proxy_pass http://spendshelf_backend;
+    proxy_pass http://webhook_backend;
   }
 }
