refactored all project according to a new struct of the project also make changes following golint pieces of advice

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,12 +12,13 @@ services:
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
       MONGO_INITDB_ROOT_PASSWORD: toor
-  webhook:
-    image: webhook
+  spendshelf:
+    image: spendshelf
     build: ./src/
-    container_name: webhook
+    container_name: spendshelf
     restart: always
     environment:
+      - HTTPAddr=:80
       - MONGO_URI=mongodb://root:toor@mongod:27017
       - SPEND_SHELF_DB=spendShelf
     depends_on:
