--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -4,10 +4,10 @@ RUN apk --no-cache add gcc build-base
 WORKDIR /go/src/github.com/lungria/spendshelf-backend/src
 ADD . .
 RUN go mod tidy
-RUN go build -o webhook
+RUN go build -o spendshelf
 
 
 FROM alpine:3.10
 WORKDIR /go/bin
 COPY --from=build-env /go/src/github.com/lungria/spendshelf-backend/src /go/bin
-ENTRYPOINT ./webhook
+ENTRYPOINT ./spendshelf
