--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       - HTTP_ADDR=:80
       - MONGO_URI=mongodb://root:toor@mongod:27017
       - SPEND_SHELF_DB=spendShelf
+      - GIN_MODE=release
     depends_on:
       - mongod
   lb:
