--- a/.drone.yml
+++ b/.drone.yml
@@ -11,9 +11,9 @@ steps:
   settings:
     repo: suddengunter/spendshelf-backend
     username:
-      from_secret: docker_username
+      from_secret: dockerhub_username
     password:
-      from_secret: docker_token
+      from_secret: dockerhub_token
   environment:
     GOARCH: arm64
   when:
