--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,37 +2,31 @@ name: Go
 
 on:
   push:
-    branches: [ master ]
-  pull_request: 
+    branches: [ v2/ci-cd ]
 
-jobs:
-
-  build:
-    name: Build
-    runs-on: ubuntu-latest
-    steps:
-
-    - name: Set up Go 1.x
-      uses: actions/setup-go@v2
-      with:
-        go-version: ^1.15
-      id: go
-
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Build
-      run: go build -v .
-
-    - name: Test
-      run: go test -v .
-      
-  golangci:
-    name: lint
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - name: golangci-lint
-        uses: golangci/golangci-lint-action@v2
+jobs:   
+  build:    
+    runs-on: ubuntu-18.04    
+      # env:      
+      # DOCKER_REGISTRY: registry.hub.docker.com      
+      # DOCKER_IMAGE: suddengunter/spendshelf-backend      
+      # DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      # DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}  
+      # DOCKER_TARGET_PLATFORM: linux/arm/v8                    
+    steps:    
+      -
+        name: Checkout
+        uses: actions/checkout@v2
+      -
+        name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@v1
         with:
-          version: v1.29
+          version: latest
+      -
+        name: Builder instance name
+        run: echo ${{ steps.buildx.outputs.name }}
+      -
+        name: Available platforms
+        run: echo ${{ steps.buildx.outputs.platforms }}
+ 
