--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,12 +6,12 @@ on:
 
 jobs:   
   build:    
-    runs-on: ubuntu-18.04    
-      # env:      
-      # DOCKER_REGISTRY: registry.hub.docker.com      
-      # DOCKER_IMAGE: suddengunter/spendshelf-backend      
-      # DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
-      # DOCKER_PASSWORD: ${{ secrets.DOCKER_TOKEN }}  
+    runs-on: "ubuntu-20.04"
+    env:
+      DOCKER_REGISTRY: registry.hub.docker.com      
+      DOCKER_IMAGE: suddengunter/spendshelf-backend      
+      DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+      DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}  
       # DOCKER_TARGET_PLATFORM: linux/arm/v8                    
     steps:    
       - name: Checkout
@@ -27,7 +27,21 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           version: latest
+          install: true
 
-      - name: Available platforms
-        run: echo ${{ steps.buildx.outputs.platforms }}
- 
+      # - name: Available platforms
+      #   run: echo ${{ steps.buildx.outputs.platforms }}
+    
+      - name: Docker Login      
+        if: success()      
+        run: |        
+          echo "${DOCKER_TOKEN}" | docker login ${DOCKER_REGISTRY} --username "${DOCKER_USERNAME}" --password-stdin
+    
+      - name: Docker Build & Push      
+        if: success()      
+        run: |        
+          docker build build \
+          --platform linux/arm/v8 \
+          --tag ${{ steps.prepare.outputs.docker_image }}:latest \
+          --file ./Dockerfile \
+          --output type=image,push=true .
