--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,8 @@ jobs:
     runs-on: "ubuntu-20.04"
     env:
       DOCKER_REGISTRY: registry.hub.docker.com      
-      DOCKER_IMAGE: suddengunter/spendshelf-backend      
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}  
-      # DOCKER_TARGET_PLATFORM: linux/arm/v8                    
     steps:    
       - name: Checkout
         uses: actions/checkout@v2
@@ -42,6 +40,6 @@ jobs:
         run: |        
           docker build \
           --platform linux/arm/v8 \
-          --tag ${{ steps.prepare.outputs.docker_image }}:latest \
+          --tag suddengunter/spendshelf-backend:latest \
           --file ./Dockerfile \
           --output type=image,push=true .
