--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,6 @@ jobs:
   build:    
     runs-on: "ubuntu-20.04"
     env:
-      DOCKER_REGISTRY: registry.hub.docker.com      
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}  
     steps:    
@@ -25,15 +24,13 @@ jobs:
         uses: docker/setup-buildx-action@v1
         with:
           version: latest
+    
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      # - name: Available platforms
-      #   run: echo ${{ steps.buildx.outputs.platforms }}
-    
-      - name: Docker Login      
-        if: success()      
-        run: |        
-          echo "${DOCKER_TOKEN}" | docker login ${DOCKER_REGISTRY} --username "${DOCKER_USERNAME}" --password-stdin
-    
       - name: Docker Build & Push      
         if: success()      
         run: |        
@@ -42,3 +39,10 @@ jobs:
           --tag suddengunter/spendshelf-backend:latest \
           --file ./Dockerfile \
           --output type=image,push=true .
+
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          platforms: linux/amd64,linux/arm64
+          push: true
+          tags: suddengunter/spendshelf-backend:latest
