--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -6,8 +6,18 @@ on:
 jobs:
 
   build:
-    name: Build
+    name: Build & Test
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:12
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
 
     - name: Set up Go 1.x
@@ -21,9 +31,12 @@ jobs:
 
     - name: Build
       run: go build -v .
-
     - name: Test
-      run: go test -v .
+      run: |
+          echo "PG_TEST_USERNAME=postgres" >> $GITHUB_ENV
+          echo "PG_TEST_PASSWORD=postgres" >> $GITHUB_ENV
+          echo "PG_TEST_HOST=localhost:5432" >> $GITHUB_ENV
+          go test -v ./...
       
   golangci:
     name: lint
