--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -33,17 +33,17 @@ jobs:
 #    runs-on: ubuntu-20.04
 #    steps:
 #
-#    - name: Set up Go 1.x
-#      uses: actions/setup-go@v2
-#      with:
-#        go-version: ^1.15
-#      id: go
-#
-#    - name: Check out code into the Go module directory
-#      uses: actions/checkout@v2
-#
-#    - name: Build
-#      run: go build -v .
+    - name: Set up Go 1.x
+      uses: actions/setup-go@v2
+      with:
+        go-version: ^1.15
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v2
+
+    - name: Build
+      run: go build -v .
 
     - name: Test
       run: |
