--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -17,7 +17,7 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: adminpass123
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -48,7 +48,7 @@ jobs:
     - name: Test
       run: |
           export PG_TEST_USERNAME=postgres
-          export PG_TEST_PASSWORD=postgres
+          export PG_TEST_PASSWORD=adminpass123
           export PG_TEST_HOST=localhost:5432
           go test -v ./...
   golangci:
