--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,19 +4,15 @@ on:
   pull_request: 
 
 jobs:
-  # Label of the runner job
   runner-job:
-    # You must use a Linux environment when using service containers or container jobs
-    runs-on: ubuntu-latest
-
-    # Service containers to run with `runner-job`
+    name: Build & Test
+    runs-on: ubuntu-20.04
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image
         image: postgres
-        # Provide the password for postgres
         env:
+          # Must be set to any custom value except the default 'postgres'. If default value is used - for some reason
+          # we would be unable to connect to new dynamically created databases in runtime.
           POSTGRES_PASSWORD: adminpass123
         # Set health checks to wait until postgres has started
         options: >-
@@ -25,14 +21,8 @@ jobs:
           --health-timeout 5s
           --health-retries 5
         ports:
-          # Maps tcp port 5432 on service container to the host
           - 5432:5432
     steps:
-#  build:
-#    name: Build & Test
-#    runs-on: ubuntu-20.04
-#    steps:
-#
     - name: Set up Go 1.x
       uses: actions/setup-go@v2
       with:
@@ -51,6 +41,7 @@ jobs:
           export PG_TEST_PASSWORD=adminpass123
           export PG_TEST_HOST=localhost:5432
           go test -v ./...
+
   golangci:
     name: lint
     runs-on: ubuntu-20.04
