--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -43,7 +43,7 @@ jobs:
           go test -v ./...
 
   golangci:
-    name: lint
+    name: Lint
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
