--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,8 +27,8 @@ services:
       SHELF_MONO_ACCOUNT_ID: "acc1"
       SHELF_MONO_API_KEY: "apikey1"
       SHELF_MONO_BASE_URL: "https://api.monobank.ua"
-      SHELF_DB_CONN: "postgres://db/postgres?sslmode=disable&user=postgres&password=adminpass123"
-      SHELF_CORS_HOST: "http://localhost:8080"
+      SHELF_DB_CONN: "postgres://db/spendshelf?sslmode=disable&user=postgres&password=adminpass123"
+      SHELF_CORS_HOST: "http://localhost:3000"
 
 volumes:
   dbdata:
