--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,9 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/amd64,linux/arm64
+          build-args: |
+            TARGETOS:linux
+            TARGETARCH:arm64
+          platforms: linux/arm64
           push: true
           tags: suddengunter/spendshelf-backend:latest
