--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -1,8 +1,9 @@
-name: main
+name: tag
 
 on:
   push:
-    branches: [ main ]
+    tags:        
+      - v*
 
 jobs:   
   build:    
@@ -10,31 +11,28 @@ jobs:
     env:
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_TOKEN: ${{ secrets.DOCKER_TOKEN }}  
-    steps:    
+    steps:
       - name: Checkout
         uses: actions/checkout@v2
-            
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-        with:
-          platforms: arm64
 
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
         with:
           version: latest
-    
+
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_TOKEN }}
 
+      - name: Get the tag name
+        run: echo "TAG=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/arm64
+          platforms: linux/arm64,linux/arm64
           push: true
-          tags: suddengunter/spendshelf-backend:latest
+          tags: suddengunter/spendshelf-backend:${{ env.TAG }}
