--- a/.github/workflows/tag.yml
+++ b/.github/workflows/tag.yml
@@ -33,6 +33,6 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          platforms: linux/arm64,linux/arm64
+          platforms: linux/arm64,linux/amd64
           push: true
           tags: suddengunter/spendshelf-backend:${{ env.TAG }}
